[package]
name = "litemint-auction-contract"
version = "0.1.0"
edition = "2021"
authors = ["Fred Kyung-jin Rezeau <fred@litemint.com>"]

[package.metadata]
license = "MIT"
repository = "https://github.com/fredericrezeau/litemint-auction-contract"
homepage = "https://litemint.com"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0-rc2"

[dev_dependencies]
soroban-sdk = { version = "20.0.0-rc2", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true